--- a/src/config.json
+++ b/src/config.json
@@ -2,7 +2,7 @@
   "settings": {
     "creator": "Lǐ Rén Xīn",
     "apiName": "赵露思",
-    "description": "Hello everyone, I am a fan of Zhao Lusi. This time I want to help my friends by providing a free apikey. I hope my friends are satisfied with this apikey service.  ",
+    "description": "Hello everyone, I am a fan of Zhao Lusi. This time I want to help my friends by providing a free apikey. I hope my friends are satisfied with this API service.  ",
     "apiVersion": "v1.0",
     "visitors": "0",
     "favicon": "/src/danzz.jpg",
