--- a/src/config.json
+++ b/src/config.json
@@ -202,6 +202,20 @@
         ]
       }
     ],
+    "Primbon" : [
+      {
+  "name": "Arti Nama",
+  "endpoint": "/api/primbon/artinama",
+  "method": "GET",
+  "params": [
+    {
+      "name": "nama",
+      "required": true,
+      "description": "Nama yang ingin dicari artinya"
+    }
+  ]
+}
+    ],
     "search": [
       {
         "name": "Youtube Search",
